# DeltaCore

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  PROJECT_SPEC.md  QUALITY_AND_VALIDATION.md
src/derivatives_risk_engine/: __init__.py
src/derivatives_risk_engine/api/: main.py  routes_demo.py  routes_pricing.py  routes_risk.py  schemas.py
src/derivatives_risk_engine/calibration/: __init__.py  diagnostics.py  implied_vol.py
src/derivatives_risk_engine/core/: __init__.py  exceptions.py  instruments.py  market.py  validation.py
src/derivatives_risk_engine/models/: __init__.py  bachelier.py  black_scholes.py
src/derivatives_risk_engine/numerics/: __init__.py  finite_difference.py  monte_carlo.py  normal.py  root_finding.py
src/derivatives_risk_engine/risk/: __init__.py  greeks.py  scenario.py  var.py
src/derivatives_risk_engine/services/: __init__.py  pricing_service.py  risk_service.py
tests/integration/: test_api.py
tests/unit/: test_bachelier.py  test_black_scholes.py  test_black_scholes_greeks.py  test_finite_difference.py  test_implied_volatility.py  test_monte_carlo.py  test_root_finding.py  test_scenario.py  test_var.py
