[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deltacore"
version = "0.1.0"
description = "Production-minded Python backend for derivatives pricing, Greeks, volatility calibration, and market-risk analytics."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111",
  "numpy>=1.26",
  "pydantic>=2.7",
  "scipy>=1.13",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.5",
  "uvicorn>=0.30",
]

[tool.hatch.build.targets.wheel]
packages = ["src/derivatives_risk_engine"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
